After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 779678 - terminal: missing shell causes execvp error when executing in runtimes
terminal: missing shell causes execvp error when executing in runtimes
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: plugins
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-06 22:50 UTC by Christian Hergert
Modified: 2017-03-06 22:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
terminal: don't use runtime for preferred shell discover (1.37 KB, patch)
2017-03-06 22:51 UTC, Christian Hergert
committed Details | Review
terminal: remove use of GPtrArray for single element (1.96 KB, patch)
2017-03-06 22:51 UTC, Christian Hergert
committed Details | Review
terminal: fallback to /bin/bash when necessary (1.22 KB, patch)
2017-03-06 22:51 UTC, Christian Hergert
committed Details | Review

Description Christian Hergert 2017-03-06 22:50:38 UTC
Snip =====

The shortcut ctrl + alt + shift + t does not work. There is a "unknown terminal" which disappears instant (like 0.2 secs).

"execvp /usr/bin/fish: No such file or directory"

I switched my default shell back to bash. Now it's working.

End =====
Comment 1 Christian Hergert 2017-03-06 22:51:38 UTC
Created attachment 347344 [details] [review]
terminal: don't use runtime for preferred shell discover

This is more likely to make us end up with something like /bin/sh if we
try to run getent from within the runtime.
Comment 2 Christian Hergert 2017-03-06 22:51:41 UTC
Created attachment 347345 [details] [review]
terminal: remove use of GPtrArray for single element

We don't need the GPtrArray because we only had a single element in it
anyway (plus NULL terminator). Just use the push_argv() helper.
Comment 3 Christian Hergert 2017-03-06 22:51:45 UTC
Created attachment 347346 [details] [review]
terminal: fallback to /bin/bash when necessary

All the runtimes today thus far have bash, so just depend on that if we
do not have the preferred shell in the runtime (say its zsh, fish, etc).
Comment 4 Christian Hergert 2017-03-06 22:55:55 UTC
Attachment 347344 [details] pushed as c1f8912 - terminal: don't use runtime for preferred shell discover
Attachment 347345 [details] pushed as e0dcecc - terminal: remove use of GPtrArray for single element
Attachment 347346 [details] pushed as 658c0ba - terminal: fallback to /bin/bash when necessary