terminal: don't use runtime for preferred shell discover

This is more likely to make us end up with something like /bin/sh if we
try to run getent from within the runtime.

https://bugzilla.gnome.org/show_bug.cgi?id=779678